Layout is ready

--- a/www/cart-2.html
+++ b/www/cart-2.html
@@ -331,13 +331,58 @@
 						<div class="checkbox-ico"><div></div></div>
 						<div class="checkbox-content">
 							<div>
-								<div class="ico"></div>
+								<div class="ico">
+									<svg version="1.1" id="shiping-courier-ico" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+										 width="392.879px" height="267.84px" viewBox="0 0 392.879 267.84" enable-background="new 0 0 392.879 267.84"
+										 xml:space="preserve">
+									<g>
+										<path fill="#BABABA" d="M321.199,195.84c-9.598,0-18.719,3.762-25.598,10.558
+											c-6.883,6.884-10.723,15.841-10.723,25.442c0,9.601,3.762,18.558,10.723,25.441c6.957,6.797,16,10.559,25.598,10.559
+											c19.68,0,35.68-16.16,35.68-36S340.879,195.84,321.199,195.84 M321.199,251.84c-11.039,0-20.32-9.121-20.32-20s9.281-20,20.32-20
+											c10.879,0,19.68,8.961,19.68,20S332.078,251.84,321.199,251.84"/>
+										<path fill="#BABABA" d="M330.48,75.922c-1.441-1.363-3.359-2.082-5.359-2.082h-41.043c-4.398,0-8,3.601-8,8v65.601
+											c0,4.399,3.602,8,8,8h65.121c4.402,0,8-3.601,8-8v-43.92c0-2.239-0.961-4.399-2.641-5.918L330.48,75.922z M341.199,139.44h-49.121
+											V89.762H322l19.199,17.277V139.44z"/>
+										<path fill="#BABABA" d="M125.84,195.84c-9.602,0-18.719,3.762-25.602,10.558c-6.879,6.884-10.718,15.841-10.718,25.442
+											c0,9.601,3.761,18.558,10.718,25.441c6.961,6.797,16,10.559,25.602,10.559c19.68,0,35.68-16.16,35.68-36
+											S145.52,195.84,125.84,195.84 M125.84,251.84c-11.039,0-20.32-9.121-20.32-20s9.281-20,20.32-20c10.879,0,19.68,8.961,19.68,20
+											S136.719,251.84,125.84,251.84"/>
+										<path fill="#BABABA" d="M72.48,205.68H56.398v-21.282c0-4.397-3.597-8-8-8c-4.398,0-8,3.603-8,8v29.282
+											c0,4.398,3.602,8,8,8H72.48c4.399,0,8-3.602,8-8S76.879,205.68,72.48,205.68"/>
+										<path fill="#BABABA" d="M113.039,162.078c0-4.398-3.598-8-8-8H8c-4.398,0-8,3.602-8,8c0,4.401,3.602,8,8,8h97.039
+											C109.441,170.078,113.039,166.559,113.039,162.078"/>
+										<path fill="#BABABA" d="M24.238,133.199l97.043,0.563c4.399,0,8-3.524,8.078-7.922
+											c0.082-4.481-3.519-8.078-7.918-8.078l-97.043-0.563H24.32c-4.398,0-8,3.52-8,7.922C16.238,129.602,19.84,133.199,24.238,133.199"
+											/>
+										<path fill="#BABABA" d="M40.559,96.879h97.043c4.398,0,8-3.598,8-8c0-4.399-3.602-8-8-8H40.559c-4.399,0-8,3.601-8,8
+											C32.559,93.281,36.16,96.879,40.559,96.879"/>
+										<path fill="#BABABA" d="M389.922,86.078l-57.281-47.437c-1.441-1.2-3.199-1.84-5.121-1.84H260.16V8
+											c0-4.398-3.602-8-8-8H48.398c-4.398,0-8,3.602-8,8v58.559c0,4.402,3.602,8,8,8c4.403,0,8-3.598,8-8V16h187.84v189.68h-65.597
+											c-4.403,0-8,3.602-8,8s3.597,8,8,8h97.679c4.398,0,8-3.602,8-8s-3.602-8-8-8h-16.082V52.801h64.48L376.879,96l-0.559,109.52H368
+											c-4.398,0-8,3.602-8,8c0,4.402,3.602,8,8,8h16.238c4.402,0,8-3.52,8-7.918l0.641-121.282
+											C392.801,89.922,391.762,87.602,389.922,86.078"/>
+									</g>
+									</svg>
+								</div>
 								<span>+1250 р</span>
 							</div>
 							<div>
 								<p>Выберите желаемые дату и время доставки:</p>
 								<input type="text" id="datepicker" />
-								<input type="time" />
+								<div id="timepicker">
+									<select>
+										<option value="9:00">9:00</option>
+										<option value="10:00">10:00</option>
+										<option value="11:00">11:00</option>
+										<option value="12:00">12:00</option>
+										<option value="13:00">13:00</option>
+										<option value="14:00">14:00</option>
+										<option value="15:00">15:00</option>
+										<option value="16:00">16:00</option>
+										<option value="17:00">17:00</option>
+										<option value="18:00">18:00</option>
+									</select>
+								</div>
 							</div>
 							<div>Стоимость доставки <span>500 р</span></div>
 						</div>
@@ -349,10 +394,60 @@
 						<div class="checkbox-ico"><div></div></div>
 						<div class="checkbox-content">
 							<div>
-								<div class="ico"></div>
+								<div class="ico">
+									<svg version="1.1" id="shiping-self-ico" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+										 width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
+									<g>
+										<path fill="#BABABA" d="M25.086,20.801c3.086,0,5.598-2.512,5.598-5.602c0-3.086-2.512-5.597-5.598-5.597
+											c-3.09,0-5.602,2.511-5.602,5.597C19.484,18.289,21.996,20.801,25.086,20.801 M25.086,12.102c1.706,0,3.097,1.391,3.097,3.097
+											c0,1.708-1.391,3.097-3.097,3.097c-1.709,0-3.097-1.389-3.097-3.097C21.989,13.493,23.377,12.102,25.086,12.102"/>
+										<path fill="#BABABA" d="M24.941,43.805l12.273-17.727c4.605-6.137,3.938-16.223-1.426-21.582
+											C32.895,1.598,29.039,0,24.941,0c-4.097,0-7.949,1.598-10.847,4.492C8.73,9.855,8.066,19.941,12.652,26.055L24.941,43.805z
+											 M15.81,6.565c2.437-2.438,5.683-3.782,9.131-3.782c3.451,0,6.693,1.343,9.136,3.782c4.55,4.549,5.107,13.112,1.183,18.348
+											L24.941,39.814L14.609,24.892C10.698,19.678,11.26,11.115,15.81,6.565"/>
+										<path fill="#BABABA" d="M0.961,45.684l-0.68,0.676c-0.375,0.375-0.375,0.984,0,1.359C0.469,47.906,0.718,48,0.961,48
+											c0.244,0,0.492-0.094,0.68-0.281l0.68-0.68c0.375-0.375,0.375-0.98,0-1.355C1.945,45.309,1.335,45.309,0.961,45.684"/>
+										<path fill="#BABABA" d="M6.75,41.441c-0.53,0-0.961,0.427-0.961,0.957c0,0.534,0.431,0.961,0.961,0.961h1.748
+											c0.529,0,0.955-0.427,0.955-0.961c0-0.53-0.426-0.957-0.955-0.957H6.75z"/>
+										<path fill="#BABABA" d="M5.236,42.765c-0.376-0.375-0.98-0.375-1.355,0l-1.239,1.232c-0.374,0.38-0.374,0.984,0,1.359
+											c0.189,0.188,0.438,0.281,0.681,0.281c0.244,0,0.492-0.094,0.68-0.281l1.233-1.237C5.61,43.744,5.61,43.14,5.236,42.765"/>
+										<path fill="#BABABA" d="M15.487,41.441c-0.53,0-0.961,0.427-0.961,0.957c0,0.534,0.431,0.961,0.961,0.961h1.749
+											c0.529,0,0.957-0.427,0.957-0.961c0-0.53-0.428-0.957-0.957-0.957H15.487z"/>
+										<path fill="#BABABA" d="M11.117,41.441c-0.531,0-0.961,0.427-0.961,0.957c0,0.534,0.431,0.961,0.961,0.961h1.749
+											c0.529,0,0.961-0.427,0.961-0.961c0-0.53-0.432-0.957-0.961-0.957H11.117z"/>
+										<path fill="#BABABA" d="M19.92,41.441c-0.529,0-0.961,0.427-0.961,0.957c0,0.534,0.432,0.961,0.961,0.961h0.961
+											c0.53,0,0.961-0.427,0.961-0.961c0-0.53-0.432-0.957-0.961-0.957H19.92z"/>
+										<path fill="#BABABA" d="M0.801,43.656c0.203,0,0.41-0.097,0.566-0.29l3.102-3.846c0.074-0.098,0.156-0.18,0.277-0.271
+											l0.156-0.102c0.028-0.02,0.055-0.044,0.082-0.059l0.301-0.116c0.106-0.024,0.211-0.039,0.317-0.039h12c0.441,0,0.8-0.44,0.8-0.992
+											c0-0.548-0.359-0.988-0.8-0.988h-12c-0.207,0-0.414,0.024-0.633,0.077c-0.078,0.02-0.153,0.049-0.223,0.077l-0.105,0.039
+											c-0.09,0.029-0.18,0.063-0.262,0.106c-0.094,0.049-0.184,0.106-0.274,0.17l-0.074,0.053c-0.07,0.044-0.136,0.088-0.207,0.146
+											c-0.176,0.146-0.34,0.311-0.488,0.494l-3.102,3.846c-0.312,0.388-0.312,1.018,0,1.405C0.391,43.56,0.598,43.656,0.801,43.656"/>
+										<path fill="#BABABA" d="M46.363,39.182c0.244,0,0.492-0.094,0.676-0.281l0.68-0.68c0.375-0.375,0.375-0.98,0-1.355
+											s-0.98-0.375-1.355,0l-0.68,0.68c-0.375,0.375-0.375,0.98,0,1.355C45.871,39.088,46.115,39.182,46.363,39.182"/>
+										<path fill="#BABABA" d="M43.66,39.781l-1.449,1.449c-0.375,0.375-0.375,0.984,0,1.359
+											c0.188,0.188,0.432,0.281,0.68,0.281c0.244,0,0.492-0.094,0.68-0.281l1.449-1.449c0.375-0.375,0.375-0.984,0-1.359
+											S44.035,39.406,43.66,39.781"/>
+										<path fill="#BABABA" d="M37.97,41.441c-0.529,0-0.961,0.427-0.961,0.957c0,0.534,0.432,0.961,0.961,0.961h2.049
+											c0.534,0,0.961-0.427,0.961-0.961c0-0.53-0.427-0.957-0.961-0.957H37.97z"/>
+										<path fill="#BABABA" d="M32.845,41.441c-0.53,0-0.956,0.427-0.956,0.957c0,0.534,0.426,0.961,0.956,0.961h2.053
+											c0.53,0,0.956-0.427,0.956-0.961c0-0.53-0.426-0.957-0.956-0.957H32.845z"/>
+										<path fill="#BABABA" d="M28.721,41.441c-0.529,0-0.961,0.427-0.961,0.957c0,0.534,0.432,0.961,0.961,0.961h0.961
+											c0.529,0,0.961-0.427,0.961-0.961c0-0.53-0.432-0.957-0.961-0.957H28.721z"/>
+										<path fill="#BABABA" d="M46.637,40.594l-3.102,3.846c-0.074,0.092-0.156,0.175-0.277,0.267l-0.152,0.102
+											c-0.031,0.024-0.063,0.049-0.094,0.063c-0.023,0.014-0.051,0.019-0.078,0.028l-0.223,0.083c-0.102,0.028-0.207,0.043-0.309,0.043
+											H6.312l-1.214,1.211c-0.344,0.344-0.399,0.969-0.121,1.396C5.137,47.874,5.367,48,5.602,48c0.175,0,0.351-0.073,0.5-0.218
+											l0.777-0.775h35.523c0.207,0,0.418-0.024,0.621-0.077c0.082-0.02,0.16-0.049,0.238-0.078l0.098-0.038
+											c0.09-0.029,0.18-0.063,0.27-0.112c0.094-0.048,0.18-0.106,0.27-0.169l0.078-0.054c0.07-0.043,0.137-0.087,0.199-0.136
+											c0.176-0.149,0.34-0.314,0.488-0.498l3.102-3.847c0.313-0.388,0.313-1.017,0-1.404S46.949,40.206,46.637,40.594"/>
+										<path fill="#BABABA" d="M31.199,38.687c0,0.552,0.359,0.992,0.801,0.992h9.738l2.633-3.265
+											c0.317-0.387,0.317-1.017,0-1.404c-0.313-0.388-0.816-0.388-1.129,0l-2.164,2.688H32C31.559,37.698,31.199,38.139,31.199,38.687"/>
+									</g>
+									</svg>
+								</div>
 								<span>+0 р</span>
 							</div>
 							<a href="#" id="select-outpost" >Выбрать пункт</a>
+							<div>Стоимость доставки <span>500 р</span></div>
 						</div>
 					</label>
 				</div>
@@ -360,15 +455,67 @@
 			<h3>Способ оплаты</h3>
 			<div class="row">
 				<div class="col-xs-12 col-md-6">
-					<input type="radio" id="payment-variant-courier" name="payment-variant" value="Наличными" />
-					<label for="payment-variant-courier">
+					<input type="radio" id="payment-variant-cash" name="payment-variant" value="Наличными" />
+					<label for="payment-variant-cash">
 						<div class="checkbox-ico"><div></div></div>
+						<div class="checkbox-content">
+							<div>
+								<div class="ico">
+									<svg version="1.1" id="payment-cash-ico" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+										 width="390.078px" height="334.801px" viewBox="0 0 390.078 334.801" enable-background="new 0 0 390.078 334.801"
+										 xml:space="preserve">
+									<g>
+										<path fill="#BABABA" d="M368.238,145.602h-9.277V89.84c0-22.801-18.563-41.281-41.281-41.281h-8.559l0.078-20.719
+											c0-15.36-12.48-27.84-27.84-27.84H33.84C15.359,0,0.238,14.879,0,33.359v273.602c0,15.358,12.48,27.84,27.84,27.84h289.922
+											c22.797,0,41.277-18.563,41.277-41.281v-55.84h9.281c12,0,21.758-9.758,21.758-21.758v-48.563
+											C390,155.359,380.238,145.602,368.238,145.602 M33.84,19.199h247.52c4.719,0,8.641,3.84,8.641,8.563l-0.078,20.797H33.84
+											c-8.078,0-14.641-6.559-14.641-14.637C19.199,25.84,25.762,19.199,33.84,19.199 M339.762,293.44
+											c0,12.161-9.922,22.079-22.082,22.079H27.762c-4.723,0-8.641-3.84-8.641-8.641V64.398c4.481,2.161,9.438,3.364,14.719,3.364h283.84
+											c12.16,0,22.082,9.918,22.082,22.078v55.762h-65.523c-12,0-21.758,9.757-21.758,21.757v48.563c0,12,9.758,21.758,21.758,21.758
+											h65.523V293.44z M370.801,215.922c0,1.437-1.121,2.558-2.563,2.558H274.32c-1.441,0-2.559-1.121-2.559-2.558v-48.563
+											c0-1.359,1.117-2.558,2.559-2.558h93.918c1.363,0,2.563,1.121,2.563,2.558V215.922z"/>
+									</g>
+									</svg>
+								</div>
+							</div>
+							<div>
+								<p>Наличный расчет</p>
+							</div>
+						</div>
+						<div class="banknote">
+							<label for="banknote">С какой суммы готовить сдачу?</label>
+							<input type="text" id="banknote" name="banknote" />
+						</div>
 					</label>
 				</div>
 				<div class="col-xs-12 col-md-6">
-					<input type="radio" id="payment-variant-self" name="payment-variant" value="Картой" checked />
-					<label for="payment-variant-self">
+					<input type="radio" id="payment-variant-card" name="payment-variant" value="Картой" checked />
+					<label for="payment-variant-card">
 						<div class="checkbox-ico"><div></div></div>
+						<div class="checkbox-content">
+							<div>
+								<div class="ico">
+									<svg version="1.1" id="payment-card-ico" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+										 width="268.641px" height="197.953px" viewBox="0 0 268.641 197.953" enable-background="new 0 0 268.641 197.953"
+										 xml:space="preserve">
+									<g>
+										<path fill="#BABABA" d="M232.656,197.953H35.992C16.145,197.953,0,181.797,0,161.961V35.992
+											C0,16.145,16.145,0,35.992,0h196.66c19.836,0,35.988,16.145,35.988,35.992v125.969
+											C268.648,181.801,252.496,197.953,232.656,197.953 M35.992,10.281c-14.183,0-25.711,11.528-25.711,25.711v125.969
+											c0,14.176,11.528,25.707,25.711,25.707h196.66c14.176,0,25.707-11.531,25.707-25.707V35.992c0-14.183-11.531-25.711-25.707-25.711
+											H35.992z M185.395,30.23c12.828,0,23.23,10.399,23.23,23.231s-10.395,23.234-23.23,23.234c-12.833,0-23.227-10.402-23.227-23.234
+											S172.566,30.23,185.395,30.23 M217.781,30.23c12.828,0,23.234,10.399,23.234,23.231s-10.398,23.234-23.234,23.234
+											c-12.832,0-23.227-10.402-23.227-23.234S204.953,30.23,217.781,30.23 M27.637,137.973h42.82v15.423h-42.82V137.973z
+											 M84.484,137.973h42.828v15.423H84.484V137.973z M141.324,137.973h42.836v15.423h-42.836V137.973z M198.172,137.973h42.84v15.423
+											h-42.84V137.973z M27.637,30.238h80.953V45.66H27.637V30.238z M27.637,60.844h42.832V76.27H27.637V60.844z"/>
+									</g>
+									</svg>
+								</div>
+							</div>
+							<div>
+								<p>Безналичный расчет</p>
+							</div>
+						</div>
 					</label>
 				</div>
 			</div>
@@ -524,4 +671,4 @@
 <script src="js/jquery.maskedinput.min.js"></script>
 <script src="js/script.js"></script>
 </body>
-</html>
+</html>position: relative;
