Yandex map api is done

--- a/www/cart-1.html
+++ b/www/cart-1.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/waves.min.css" />
 	<link rel="stylesheet" type="text/css" href="adds/jquery-ui/jquery-ui.min.css" />
+	<link rel="stylesheet" type="text/css" href="adds/jScrollPane/jquery.jscrollpane.css" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<link rel="stylesheet" type="text/css" href="css/media.css" />
 	<!--[if lt IE 9]>
@@ -570,6 +571,8 @@
 <script src="adds/jquery-ui/jquery-ui.min.js"></script>
 <script src="js/jquery.elevateZoom-3.0.8.min.js"></script>
 <script src="js/jquery.maskedinput.min.js"></script>
+<script src="adds/jScrollPane/jquery.mousewheel.js"></script>
+<script src="adds/jScrollPane/jquery.jscrollpane.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
