--- a/www/cart-2.html
+++ b/www/cart-2.html
@@ -28,6 +28,7 @@
 <!-- header -->
 <header>
 	<div class="container">
+		<div class="mobile-menu-trigger"></div>
 		<div class="row">
 			<div class="col-xs-12">
 				<ul class="small-nav">
@@ -745,4 +746,4 @@
 <script src="adds/jScrollPane/jquery.jscrollpane.min.js"></script>
 <script src="js/script.js"></script>
 </body>
-</html>position: relative;
+</html>
