--- a/www/blog.html
+++ b/www/blog.html
@@ -26,6 +26,7 @@
 <!-- header -->
 <header>
 	<div class="container">
+		<div class="mobile-menu-trigger"></div>
 		<div class="row">
 			<div class="col-xs-12">
 				<ul class="small-nav">
