--- a/www/header+footer.html
+++ b/www/header+footer.html
@@ -43,7 +43,7 @@
 				<a href="/"><img src="images/logo.png" alt="Логотип Эксперт-М"></a>
 			</div>
 			<div class="header-search-col">
-				<div class="header-phones">8(4212)40-82-02, 8-924-21-1118</div>
+				<div class="header-phones"><a href="tel:+74212408202">8(4212)40-82-02</a>, <a href="tel:+7924211118">8-924-21-1118</a></div>
 				<form action="" method="POST" class="header-search animated-placeholder">
 					<input class="animated-placeholder" type="text" name="header-seach" id="input-search" placeholder="Поиск..." required />
 					<label for="input-search"></label>
@@ -92,8 +92,8 @@
 					<div class="basket-details-body">
 						<div class="item">Ваша корзина еще пуста.</div>
 						<div class="item">
-							<div class="img" style="background-image: url('images/tovar-1.png');"></div>
-							<div class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</div>
+							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
+							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
 							<div class="price">
 								<div>
@@ -105,8 +105,8 @@
 							</div>
 						</div>
 						<div class="item">
-							<div class="img" style="background-image: url('images/tovar-2.jpg');"></div>
-							<div class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</div>
+							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
+							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
 							<div class="price">
 								<div>
@@ -119,8 +119,8 @@
 							</div>
 						</div>
 						<div class="item">
-							<div class="img" style="background-image: url('images/tovar-2.jpg');"></div>
-							<div class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</div>
+							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
+							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
 							<div class="price">
 								<div>
@@ -132,8 +132,8 @@
 							</div>
 						</div>
 						<div class="item">
-							<div class="img" style="background-image: url('images/tovar-2.jpg');"></div>
-							<div class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</div>
+							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
+							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
 							<div class="price">
 								<div>
@@ -145,8 +145,8 @@
 							</div>
 						</div>
 						<div class="item">
-							<div class="img" style="background-image: url('images/tovar-2.jpg');"></div>
-							<div class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</div>
+							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
+							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
 							<div class="price">
 								<div>
@@ -246,34 +246,38 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12 footer-cols-wrapper">
-				<div class="footer-col">
-					<span>Каталог</span>
-					<ul>
-						<li><a href="#">Посмотреть каталог онлайн</a></li>
-						<li><a href="#">Заказать каталог по почте</a></li>
-						<li><a href="#">Брошюры</a></li>
-						<li><a href="#">Руководства по покупке</a></li>
-					</ul>
+			<div class="col-xs-8 footer-cols-wrapper">
+				<div class="row">
+					<div class="footer-col col-xs-4">
+						<span>Каталог</span>
+						<ul>
+							<li><a href="#">Посмотреть каталог онлайн</a></li>
+							<li><a href="#">Заказать каталог по почте</a></li>
+							<li><a href="#">Брошюры</a></li>
+							<li><a href="#">Руководства по покупке</a></li>
+						</ul>
+					</div>
+					<div class="footer-col col-xs-4">
+						<span>Каталог</span>
+						<ul>
+							<li><a href="#">Посмотреть каталог онлайн</a></li>
+							<li><a href="#">Заказать каталог по почте Посмотреть каталог онлайн</a></li>
+							<li><a href="#">Брошюры</a></li>
+							<li><a href="#">Руководства по покупке</a></li>
+						</ul>
+					</div>
+					<div class="footer-col col-xs-4">
+						<span>Каталог</span>
+						<ul>
+							<li><a href="#">Посмотреть каталог онлайн Посмотреть каталог онлайн</a></li>
+							<li><a href="#">Заказать каталог по почте</a></li>
+							<li><a href="#">Брошюры</a></li>
+							<li><a href="#">Руководства по покупке</a></li>
+						</ul>
+					</div>
 				</div>
-				<div class="footer-col">
-					<span>Каталог</span>
-					<ul>
-						<li><a href="#">Посмотреть каталог онлайн</a></li>
-						<li><a href="#">Заказать каталог по почте</a></li>
-						<li><a href="#">Брошюры</a></li>
-						<li><a href="#">Руководства по покупке</a></li>
-					</ul>
-				</div>
-				<div class="footer-col">
-					<span>Каталог</span>
-					<ul>
-						<li><a href="#">Посмотреть каталог онлайн</a></li>
-						<li><a href="#">Заказать каталог по почте</a></li>
-						<li><a href="#">Брошюры</a></li>
-						<li><a href="#">Руководства по покупке</a></li>
-					</ul>
-				</div>
+			</div>
+			<div class="col-xs-4">
 				<div class="footer-col">
 					<ul class="footer-socials">
 						<li><a href="#"></a></li>
