--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/waves.min.css" />
 	<link rel="stylesheet" type="text/css" href="adds/jquery-ui/jquery-ui.min.css" />
 	<link rel="stylesheet" type="text/css" href="adds/jScrollPane/jquery.jscrollpane.css" />
+	<link rel="stylesheet" type="text/css" href="adds/fancybox2/jquery.fancybox.css" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<link rel="stylesheet" type="text/css" href="css/media.css" />
 	<!--[if lt IE 9]>
@@ -299,7 +300,7 @@
 	<div class="row goods">
 		<div class="col-xs-3">
 			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-1.png');"><div class="zoom"></div></div>
+				<div class="image" style="background-image: url('images/tovar-1.png');"><a class="zoom" href="images/tovar-1.png"></a></div>
 				<a href="product.html">
 					<div class="title">Инициатик - средства против первых морщин</div>
 					<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
@@ -313,7 +314,7 @@
 		<div class="col-xs-3">
 			<div class="item sale">
 				<div class="label label-left thumb-up"></div>
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
 					<div class="title">Инициатик - средства против первых морщин</div>
 					<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст</div>
@@ -327,7 +328,7 @@
 		<div class="col-xs-3">
 			<div class="item sale">
 				<div class="label label-right">ЛОВИ<br>МОМЕНТ</div>
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
 					<div class="title">Инициатик - средства против первых морщин</div>
 					<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст</div>
@@ -340,7 +341,7 @@
 		</div>
 		<div class="col-xs-3">
 			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
 					<div class="title">Инициатик - средства против первых морщин</div>
 					<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
@@ -353,7 +354,7 @@
 		</div>
 		<div class="col-xs-3">
 			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
 					<div class="title">Инициатик - средства против первых морщин</div>
 					<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
@@ -366,7 +367,7 @@
 		</div>
 		<div class="col-xs-3">
 			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
 					<div class="title">Инициатик - средства против первых морщин</div>
 					<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст</div>
@@ -380,7 +381,7 @@
 		</div>
 		<div class="col-xs-3">
 			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
 					<div class="title">Инициатик - средства против первых морщин</div>
 					<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
@@ -393,7 +394,7 @@
 		</div>
 		<div class="col-xs-3">
 			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
 					<div class="title">Инициатик - средства против первых морщин</div>
 					<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
@@ -414,7 +415,7 @@
 	<div class="row goods">
 		<div class="col-xs-3">
 			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
 					<div class="title">Инициатик - средства против первых морщин</div>
 					<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
@@ -427,7 +428,7 @@
 		</div>
 		<div class="col-xs-3">
 			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
 					<div class="title">Инициатик - средства против первых морщин</div>
 					<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст</div>
@@ -441,7 +442,7 @@
 		</div>
 		<div class="col-xs-3">
 			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
 					<div class="title">Инициатик - средства против первых морщин</div>
 					<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
@@ -454,7 +455,7 @@
 		</div>
 		<div class="col-xs-3">
 			<div class="item">
-				<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"><a class="zoom" href="images/tovar-2.jpg"></a></div>
 				<a href="product.html">
 					<div class="title">Инициатик - средства против первых морщин</div>
 					<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
@@ -535,6 +536,7 @@
 <script src="js/jquery.maskedinput.min.js"></script>
 <script src="adds/jScrollPane/jquery.mousewheel.js"></script>
 <script src="adds/jScrollPane/jquery.jscrollpane.min.js"></script>
+<script src="adds/fancybox2/jquery.fancybox.pack.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
