--- a/www/catalog-2.html
+++ b/www/catalog-2.html
@@ -48,7 +48,7 @@
 				</div>
 			</div>
 			<div class="modal-footer">
-				<div class="submit-result">Спасибо! Ваше сообщение было отправлено.</div>
+				<div class="submit-result active">Спасибо! Ваше сообщение было отправлено.</div>
 				<input type="submit" value="Отправить" />
 			</div>
 		</form>
