--- a/www/header+footer.html
+++ b/www/header+footer.html
@@ -48,7 +48,7 @@
 				</div>
 			</div>
 			<div class="modal-footer">
-				<div class="submit-result">Спасибо! Ваше сообщение было отправлено.</div>
+				<div class="submit-result active">Спасибо! Ваше сообщение было отправлено.</div>
 				<input type="submit" value="Отправить" />
 			</div>
 		</form>
@@ -86,13 +86,13 @@
 			<div class="header-basket-col">
 				<div class="basket">
 					<span class="ico"><span class="badge">115</span></span>
-					<span class="total-price underlined">20 547,87 руб</span>
+					<span class="total-price underlined"><span>0</span> руб</span>
 				</div>
 				<div class="basket-details">
 					<div class="basket-details-header">Корзина</div>
 					<div class="basket-details-body">
 						<div class="item">Ваша корзина еще пуста.</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
 							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -105,7 +105,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -119,7 +119,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -132,7 +132,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -145,7 +145,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item">
+						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2 <span>шт</span></div>
@@ -163,7 +163,7 @@
 						<a href="catalog-text.html">Смотреть все товары</a>
 						<div class="summ">
 							<span>Итого:</span>
-							<span>3593.37</span>
+							<span>0</span>
 							<span>руб</span>
 						</div>
 					</div>
